# DevOps-Course-Starter

./: .dockerignore  .env.dev  .env.prod  .env.template  .env.test  .gitignore  Dockerfile  README.md  build.ps1  docker-compose.yml  pyproject.toml
.github/workflows/: ci-pipeline.yml
documentation/: Module6-Container.drawio  Module6-Context.drawio  Module6-ToDoWebApplicationComponent.drawio
terraform/: main.tf  outputs.tf  variables.tf
todo_app/: app.py
todo_app/Data/: item.py  mongo_items.py  trello_items.py
todo_app/ViewModels/: HomeViewModel.py
todo_app/data/: trello_items.py
todo_app/src/: app.py
todo_app/src/Data/: trello_items.py
todo_app/src/ViewModels/: HomeViewModel.py
todo_app/templates/: index.html  layout.html  noauth.html
todo_app/tests/: test_home_view_model.py  test_integration.py
