[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
python-dotenv = "^0.14.0"
pymongo = "^4.3.3"
click = "^8.1.3"
escape = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mongomock = "^4.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
